package Separador;

public interface Separadores {
    String SEPARADOR = "===========================";
}
